syntax = "proto3";
package api;
option go_package = "./../api";
import "common.proto";
enum FileTypeE{
    file = 0;
    image = 1;
}
message FileR{
    string id = 1;
    string name = 2;
    FileTypeE type = 3;
}

message AddFileI{
    AuthI auth = 1;
    string name = 2;
    FileTypeE type = 3;
}

service FileS{
    rpc Create(AddFileI)returns(FileR){}
    rpc Id(GetByIdI)returns(FileR){}
}